--- a/src/style.css
+++ b/src/style.css
@@ -279,6 +279,11 @@ a:focus {
   margin-bottom: var(--spacing-4);
 }
 
+.post-search {
+  width: 100%;
+  height: 35px;
+}
+
 .header-link-home {
   font-weight: var(--fontWeight-bold);
   font-family: var(--font-heading);
